--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </nav>
 <div class="header-text">
 
-    <p>Web Developer</p>
+    <p>Web DeveloperIm from </p>
     <h1>Hi, I'm <span>Jana</span><br>from Singapore.</h1>
 
 </div>
