changed about fontsize and color

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="about-col-1">
         <img src="Aboutpic 2.jpeg"></div>
         <div class="about-col-2"></div>
-        <h1>About Me</h1>
+        <h1 class="sub tittle">About Me </h1>
 
 
 </div>
