--- a/about.html
+++ b/about.html
@@ -15,7 +15,17 @@
         <img src="Aboutpic 2.jpeg"></div>
         <div class="about-col-2"></div>
         <h1 class="sub tittle">About Me </h1>
+        <p>As an artist, my first love will always be crafting the visual.
+        I have a passion to work with small businesses and marginalized communities to bring their ideas to live.
+        Through Fullstack, I was able to leverage my creative skills with an incredible web development toolkit.
+        I offer both design and development services of web interfaces and applications + websites!</p>
+        
+<div class="tab tittle">
+<p class="tab-links">Skills</p>
+<p class="tab-links">Experience</p>
+<p class="tab-links">Education</p>
 
+</div>
 
 </div>
     
