skills underlined red

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         Through Fullstack, I was able to leverage my creative skills with an incredible web development toolkit.
         I offer both design and development services of web interfaces and applications + websites!</p>
         
-<div class="tab tittle">
-<p class="tab-links">Skills</p>
+<div class="tab-tittle">
+<p class="tab-links active-link">Skills</p>
 <p class="tab-links">Experience</p>
 <p class="tab-links">Education</p>
 
