--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src=""></script>
+    <div id="Portfolio">
+        <div class="container">
+<h1 class="sub-tittle">My Portfolio</h1>
+<div class="portfolio-list">
+<div class="work">
+    <img src=""
+</div>
+    </div>
+
 </body>
 </html>
