--- a/about.html
+++ b/about.html
@@ -21,10 +21,21 @@
         I offer both design and development services of web interfaces and applications + websites!</p>
         
 <div class="tab-tittle">
-<p class="tab-links active-link">Skills</p>
-<p class="tab-links">Experience</p>
-<p class="tab-links">Education</p>
+<p class="tab-links active-link"onclick="opentab{'skills'}">Skills</p>
+<p class="tab-links"onclick="opentab{'experience'}">Experience</p>
+<p class="tab-links"onclick="opentab{'education'}">Education</p>
+</div>
 
+<div class="tab-contents active-tab" id="skills" >
+<ul>
+    <li><span>Web development</span><br>Web App Development</li>
+    <li><span>App development</span><br>Building IOS/Android apps</li>
+    
+</ul>
+<div class="tab-contents active-tab" id="experience" > 
+</div>
+
+<div class="tab-contents active-tab" id="education" > 
 </div>
 
 </div>
@@ -32,5 +43,6 @@
     </div>
     </div>
 
+</script>
 </body>
 </html>
