--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 
         ul>
 
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
             
             
          </ul>
+
+
 </nav>
 <div class="header-text">
 
-    <p>Web Developer </p>
+    <p>Web Developer</p>
     <h1>Hi, I'm <span>Jana</span><br>from Singapore.</h1>
 
 </div>
