--- a/about.html
+++ b/about.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+   <!---------About-------->
+
     <div id="About">
     <div class="container">
     <div class=" row">
-        <div class="about-col-1">
+        <div class="about-col-1"></div>
         <img src="Aboutpic 2.jpeg"></div>
         <div class="about-col-2"></div>
-        <h1 class="sub tittle">About Me </h1>
+        <h1 class="sub-tittle">About Me</h1>
         <p>As an artist, my first love will always be crafting the visual.
         I have a passion to work with small businesses and marginalized communities to bring their ideas to live.
-        Through Fullstack, I was able to leverage my creative skills with an incredible web development toolkit.
+        Through Fullstack Academy, I was able to leverage my creative skills with an incredible web development toolkit.
         I offer both design and development services of web interfaces and applications + websites!</p>
         
 <div class="tab-tittle">
