--- a/about.html
+++ b/about.html
@@ -12,9 +12,8 @@
 
         <nav>
 
-<img src="logoneww.jpg" class="logoneww"
+<img src="logoneww.jpg" class="logoneww">
    
-    !---------About-------->
 
     <div id="About">
     <div class="container">
@@ -45,8 +44,8 @@
 <div class="tab-contents" id="Experience">
 
     <ul>
-        <li><span>2022-current</span><br>Working on HTML,CSS,Javascript at Fullstack Academy</li>
-        <li><span>2021-2022</span><br>Finishing basic projects in Codeacademy</li>
+        <li><span>2022-current </span><br> Working on HTML,CSS,Javascript at Fullstack Academy</li>
+        <li><span>2021-2022 </span><br>Finishing basic projects in Codeacademy</li>
     </ul>
     </div>
     <div class="tab-contents" id="Education">
