--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
 <div id="portfolio">
     <div class="container">
         <h1 class="sub-tittle">My Portfolio</h1>
@@ -18,9 +19,9 @@
         <img src= "work1.jpg">
         <div class="layer">
             <h3>Social Media App</h3>
-            <p>The app connects you to to talented,creative people around the world.
+            <p>The app connects you to talented,creative people around the world.
                 Downlaod it from Appstore.</p>
-                <a href="#"><i class="fa-sharp fa-regular fa-up-right-from-square"></i></a>
+                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
 </div>
 
@@ -28,9 +29,9 @@
     <img src= "work2.jpg">
     <div class="layer">
         <h3>Music App</h3>
-        <p>The app connects you to to talented,creative people around the world.
+        <p>The app connects you to talented,creative people around the world.
             Downlaod it from Appstore.</p>
-            <a href="#"><i class="fa-sharp fa-regular fa-up-right-from-square"></i></a>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
     </div>
 </div>
 
@@ -38,10 +39,12 @@
     <img src= "work3.jpg">
     <div class="layer">
         <h3>Online Shopping App</h3>
-        <p>The app connects you to to talented,creative people around the world.
+        <p>The app connects you to talented,creative people around the world.
             Downlaod it from Appstore.</p>
-            <a href="#"><i class="fa-sharp fa-regular fa-up-right-from-square"></i></a>
+            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
     </div>
+
+
 </div>
 
 </div>
